Make sure widget title remains lined up with itself and to the right of (i) icon as the browser shrinks and the title wraps. - In widget.html (line 12), add bootstrap class to make the div as the   flex container, this will make sure title text aligned with itself   when it's wrapped into the 2nd line. - In widget.html (line 14-24), wrap widget title, unit select, and spinner   with a div. This will make sure spinner stays right next the widget title   or unit select. - In opus.css (line 171-175), add spacing between (i) icon and widget   title text in search tab.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -168,6 +168,11 @@ so that both "Recent Announcements" and "Message" can be vertically aligned. */
     display: flex;
 }
 
+/* Spacing between (i) icon, and widget title text in search tab */
+#search .card-title i.fa-info-circle {
+    padding-right: 0.2rem;
+}
+
 #browse, #cart, #detail {
     padding: 0; margin:0;
     display: none;
@@ -2678,7 +2683,7 @@ at the right of -- OR -- label. */
     }
 }
 
-/* Make sure label names & hints in wdigets have a caret cursor when users mouseover. */
+/* Make sure label names & hints in wdigets have a caret cursor when users mouseover */
 .op-choice-label-name,
 .op-hints-description,
 .op-hints-info {
@@ -2686,13 +2691,13 @@ at the right of -- OR -- label. */
 }
 
 /* Make sure text in the menu align with text in the 1st line instead of (i) icon
-when wrapping into the 2nd line. */
+when wrapping into the 2nd line */
 .op-menu-item {
     display: flex;
     align-items: baseline;
 }
 
-/* Spacing between V, (i) icon, and text in the menu. */
+/* Spacing between V, (i) icon, and text in the menu */
 .op-menu-item i.fa-info-circle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
